--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
+    "@nx/devkit": "19.8.3",
+    "@nx/plugin": "^19.8.3",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.3"
   },
@@ -34,20 +36,29 @@
     "@nx/workspace": "19.8.3",
     "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^7.16.0",
     "angular-eslint": "^18.3.0",
+    "autoprefixer": "^10.4.0",
     "cypress": "^13.13.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^3.5.0",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-rxjs": "^5.0.3",
+    "eslint-plugin-rxjs-angular": "^2.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~18.2.0",
     "nx": "19.8.3",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
